--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,11 +18,11 @@ digest = "0.6"
 etcommon-block-core = { version = "0.3", default-features = false }
 etcommon-rlp = { version = "0.2", default-features = false }
 etcommon-bigint = { version = "0.2", default-features = false, features = ["rlp"] }
-
 etcommon-block = { version = "0.5", default-features = false, optional = true }
 secp256k1-plus = { version = "0.5", optional = true }
 libsecp256k1 = { version = "0.1", optional = true }
 log = "0.4"
+delegate = "0.1.3"
 
 [dev-dependencies]
 etcommon-hexutil = "0.2"
