--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
-name = "sputnikvm-cli"
+name = "evm-cli"
 version = "0.0.0"
 license = "Apache-2.0"
 authors = ["Wei Tang <hi@that.world>"]
 description = "SputnikVM CLI"
-repository = "https://github.com/ETCDEVTeam/sputnikvm"
+repository = "https://github.com/ETCDEVTeam/evm"
 
 # Since we have an explicit [[bin]] section below, we add the
 # following "autobins" line to prevent Cargo from automatically
@@ -16,14 +16,14 @@ repository = "https://github.com/ETCDEVTeam/sputnikvm"
 autobins = false
 
 [[bin]]
-name = "sputnikvm-cli"
+name = "evm-cli"
 path = "src/bin/main.rs"
 
 [dependencies]
 etcommon-bigint = "0.2"
 etcommon-hexutil = "0.2"
-sputnikvm = { path = ".." }
-sputnikvm-network-classic = { path = "../network/classic" }
+evm = { path = ".." }
+evm-network-classic = { path = "../network/classic" }
 gethrpc = { path = '../gethrpc' }
 clap = "2.22"
 serde_json = "1.0"
