--- a/network/ubiq/Cargo.toml
+++ b/network/ubiq/Cargo.toml
@@ -1,20 +1,20 @@
 [package]
-name = "sputnikvm-network-ubiq"
-version = "0.10.1"
+name = "evm-network-ubiq"
+version = "0.11.0-beta.0"
 description = "Ubiq patches for SputnikVM."
 license = "Apache-2.0"
 authors = ["Wei Tang <hi@that.world>"]
-repository = "https://github.com/ETCDEVTeam/sputnikvm"
+repository = "https://github.com/ETCDEVTeam/evm"
 
 [dependencies]
-sputnikvm = { version = "0.10", path = "../..", default-features = false }
-sputnikvm-precompiled-bn128 = { version = "0.10.1", path = "../../precompiled/bn128", default-features = false}
-sputnikvm-precompiled-modexp = { version = "0.10.1", path = "../../precompiled/modexp", default-features = false }
+evm = { version = "0.11.0-beta", path = "../..", default-features = false }
+evm-precompiled-bn128 = { version = "0.11.0-beta", path = "../../precompiled/bn128", default-features = false}
+evm-precompiled-modexp = { version = "0.11.0-beta", path = "../../precompiled/modexp", default-features = false }
 etcommon-bigint = { version = "0.2", default-features = false }
 
 [features]
 default = ["std", "c-secp256k1"]
 rlp = ["etcommon-bigint/rlp"]
-c-secp256k1 = ["sputnikvm/c-secp256k1", "sputnikvm-precompiled-bn128/c-secp256k1", "sputnikvm-precompiled-modexp/c-secp256k1"]
-rust-secp256k1 = ["sputnikvm/rust-secp256k1", "sputnikvm-precompiled-bn128/rust-secp256k1", "sputnikvm-precompiled-modexp/rust-secp256k1"]
-std = ["sputnikvm/std"]
+c-secp256k1 = ["evm/c-secp256k1", "evm-precompiled-bn128/c-secp256k1", "evm-precompiled-modexp/c-secp256k1"]
+rust-secp256k1 = ["evm/rust-secp256k1", "evm-precompiled-bn128/rust-secp256k1", "evm-precompiled-modexp/rust-secp256k1"]
+std = ["evm/std"]
