--- a/precompiled/bn128/Cargo.toml
+++ b/precompiled/bn128/Cargo.toml
@@ -1,19 +1,19 @@
 [package]
-name = "sputnikvm-precompiled-bn128"
-version = "0.10.1"
+name = "evm-precompiled-bn128"
+version = "0.11.0-beta.0"
 description = "bn128 precompiled contracts for SputnikVM."
 license = "Apache-2.0"
 authors = ["Wei Tang <hi@that.world>"]
-repository = "https://github.com/ETCDEVTeam/sputnikvm"
+repository = "https://github.com/ETCDEVTeam/evm"
 
 [dependencies]
-sputnikvm = { version = "0.10", path = "../..", default-features = false }
+evm = { version = "0.11.0-beta.0", path = "../..", default-features = false }
 etcommon-bigint = { version = "0.2", default-features = false }
 bn-plus = { version = "0.4" }
 
 [features]
 default = ["std", "c-secp256k1"]
 rlp = ["etcommon-bigint/rlp"]
-c-secp256k1 = ["sputnikvm/c-secp256k1"]
-rust-secp256k1 = ["sputnikvm/rust-secp256k1"]
-std = ["sputnikvm/std"]
+c-secp256k1 = ["evm/c-secp256k1"]
+rust-secp256k1 = ["evm/rust-secp256k1"]
+std = ["evm/std"]
