--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.11.0-beta.0"
 license = "Apache-2.0"
 authors = ["Wei Tang <hi@that.world>"]
 description = "SputnikVM - a Portable Blockchain Virtual Machine"
-repository = "https://github.com/ETCDEVTeam/evm"
+repository = "https://github.com/etclabscore/sputnikvm"
 keywords = ["no_std", "ethereum"]
 
 [lib]
